added Weather Database assignment

--- a/Weather_Database/Weather_Database.ipynb
+++ b/Weather_Database/Weather_Database.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0dad1090",
+   "id": "9af6257d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bac51416",
+   "id": "7fd914ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0b2775bd",
+   "id": "b018eba4",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9796a3b2",
+   "id": "1dae0882",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ade5e0a4",
+   "id": "89cfa1f8",
    "metadata": {},
    "outputs": [
     {
@@ -953,10 +953,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "34f78421",
+   "execution_count": 7,
+   "id": "bae75bd0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Current Description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Haines Junction</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>60.7522</td>\n",
+       "      <td>-137.5108</td>\n",
+       "      <td>19.35</td>\n",
+       "      <td>73</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Lobito</td>\n",
+       "      <td>AO</td>\n",
+       "      <td>-12.3481</td>\n",
+       "      <td>13.5456</td>\n",
+       "      <td>77.07</td>\n",
+       "      <td>81</td>\n",
+       "      <td>82</td>\n",
+       "      <td>3.44</td>\n",
+       "      <td>broken clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bredasdorp</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>-34.5322</td>\n",
+       "      <td>20.0403</td>\n",
+       "      <td>67.32</td>\n",
+       "      <td>77</td>\n",
+       "      <td>92</td>\n",
+       "      <td>12.66</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Muros</td>\n",
+       "      <td>ES</td>\n",
+       "      <td>42.7762</td>\n",
+       "      <td>-9.0603</td>\n",
+       "      <td>55.83</td>\n",
+       "      <td>73</td>\n",
+       "      <td>9</td>\n",
+       "      <td>18.28</td>\n",
+       "      <td>clear sky</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Albany</td>\n",
+       "      <td>US</td>\n",
+       "      <td>42.6001</td>\n",
+       "      <td>-73.9662</td>\n",
+       "      <td>26.31</td>\n",
+       "      <td>53</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1.01</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Saskylakh</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>71.9167</td>\n",
+       "      <td>114.0833</td>\n",
+       "      <td>-16.60</td>\n",
+       "      <td>86</td>\n",
+       "      <td>26</td>\n",
+       "      <td>3.22</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Segezha</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>63.7415</td>\n",
+       "      <td>34.3222</td>\n",
+       "      <td>28.90</td>\n",
+       "      <td>95</td>\n",
+       "      <td>100</td>\n",
+       "      <td>14.81</td>\n",
+       "      <td>light snow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Yellowknife</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>62.4560</td>\n",
+       "      <td>-114.3525</td>\n",
+       "      <td>-10.59</td>\n",
+       "      <td>67</td>\n",
+       "      <td>20</td>\n",
+       "      <td>4.61</td>\n",
+       "      <td>few clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Usatove</td>\n",
+       "      <td>UA</td>\n",
+       "      <td>46.5330</td>\n",
+       "      <td>30.6596</td>\n",
+       "      <td>26.82</td>\n",
+       "      <td>93</td>\n",
+       "      <td>93</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Aitape</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>-3.1374</td>\n",
+       "      <td>142.3475</td>\n",
+       "      <td>77.36</td>\n",
+       "      <td>89</td>\n",
+       "      <td>100</td>\n",
+       "      <td>4.45</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              City Country      Lat       Lng  Max Temp  Humidity  Cloudiness  \\\n",
+       "0  Haines Junction      CA  60.7522 -137.5108     19.35        73         100   \n",
+       "1           Lobito      AO -12.3481   13.5456     77.07        81          82   \n",
+       "2       Bredasdorp      ZA -34.5322   20.0403     67.32        77          92   \n",
+       "3            Muros      ES  42.7762   -9.0603     55.83        73           9   \n",
+       "4           Albany      US  42.6001  -73.9662     26.31        53         100   \n",
+       "5        Saskylakh      RU  71.9167  114.0833    -16.60        86          26   \n",
+       "6          Segezha      RU  63.7415   34.3222     28.90        95         100   \n",
+       "7      Yellowknife      CA  62.4560 -114.3525    -10.59        67          20   \n",
+       "8          Usatove      UA  46.5330   30.6596     26.82        93          93   \n",
+       "9           Aitape      PG  -3.1374  142.3475     77.36        89         100   \n",
+       "\n",
+       "   Wind Speed Current Description  \n",
+       "0        0.00     overcast clouds  \n",
+       "1        3.44       broken clouds  \n",
+       "2       12.66     overcast clouds  \n",
+       "3       18.28           clear sky  \n",
+       "4        1.01     overcast clouds  \n",
+       "5        3.22    scattered clouds  \n",
+       "6       14.81          light snow  \n",
+       "7        4.61          few clouds  \n",
+       "8        0.00     overcast clouds  \n",
+       "9        4.45     overcast clouds  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# City Data Frame\n",
     "city_data_df = pd.DataFrame(city_data)\n",
@@ -966,22 +1154,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "84e0135b",
+   "execution_count": 8,
+   "id": "9666c7f2",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'city_data_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/hd/m_vx3zjx3qg6lt8mz9bzjd440000gn/T/ipykernel_1666/1085999279.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0moutput_data_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"WeatherPy_Database.csv\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mcity_data_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_data_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex_label\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'City_ID'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'city_data_df' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Writing City Data CSV\n",
     "output_data_file = \"WeatherPy_Database.csv\"\n",
@@ -992,7 +1168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8814c565",
+   "id": "e88993ca",
    "metadata": {},
    "outputs": [],
    "source": []
